--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -108,7 +108,7 @@
         app:layout_constraintTop_toBottomOf="@+id/inputProfessionalName" />
 
     <EditText
-        android:id="@+id/editTextNumber4"
+        android:id="@+id/inputProfessionalIdentifier"
         android:layout_width="350sp"
         android:layout_height="48sp"
         android:layout_marginTop="12sp"
@@ -245,7 +245,7 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumber4"
+        app:layout_constraintTop_toBottomOf="@+id/inputProfessionalIdentifier"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
@@ -262,7 +262,7 @@
         app:layout_constraintEnd_toStartOf="@+id/buttonConfirm"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumber4"
+        app:layout_constraintTop_toBottomOf="@+id/inputProfessionalIdentifier"
         app:layout_constraintVertical_bias="1.0"
         tools:ignore="HardcodedText" />
 
@@ -290,7 +290,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/editTextNumber4"
+        app:layout_constraintStart_toEndOf="@+id/inputProfessionalIdentifier"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
